Add concurrency control and use force push to prevent conflicts

--- a/.github/workflows/update-maps.yml
+++ b/.github/workflows/update-maps.yml
@@ -9,6 +9,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: update-ocean-maps
+  cancel-in-progress: false
+
 jobs:
   generate-maps:
     runs-on: ubuntu-latest
@@ -71,7 +75,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git pull
           git add latest/*.png archive/
           git diff --staged --quiet || git commit -m "Update ocean maps - ${{ env.DATE }} ${{ env.TIME }} UTC"
-          git push --force-with-lease origin main
+          git push --force origin main
