--- a/.github/workflows/update-maps.yml
+++ b/.github/workflows/update-maps.yml
@@ -43,8 +43,9 @@ jobs:
 
       - name: Set timestamp variables
         run: |
-          echo "DATE=$(date -u '+%Y-%m-%d')" >> $GITHUB_ENV
-          echo "TIME=$(date -u '+%H%M')" >> $GITHUB_ENV
+          echo "DATE=$(TZ='Pacific/Auckland' date '+%Y-%m-%d')" >> $GITHUB_ENV
+          echo "TIME=$(TZ='Pacific/Auckland' date '+%H%M')" >> $GITHUB_ENV
+          echo "TIMEZONE=$(TZ='Pacific/Auckland' date '+%Z')" >> $GITHUB_ENV
 
       - name: Create directories
         run: |
@@ -83,13 +84,15 @@ jobs:
         run: |
           aws s3 sync latest/ s3://${{ secrets.R2_BUCKET_NAME }}/latest/ \
             --endpoint-url https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
+            --exclude "*" --include "*.png" --include "*.csv" --include "*.parquet" \
             --no-progress
           aws s3 sync archive/${{ env.DATE }}/ s3://${{ secrets.R2_BUCKET_NAME }}/archive/${{ env.DATE }}/ \
             --endpoint-url https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
+            --exclude "*" --include "*.png" --include "*.csv" --include "*.parquet" \
             --no-progress
 
       - name: Commit and push changes
         run: |
           git add latest/*.png archive/
-          git diff --staged --quiet || git commit -m "Update ocean maps - ${{ env.DATE }} ${{ env.TIME }} UTC"
+          git diff --staged --quiet || git commit -m "Update ocean maps - ${{ env.DATE }} ${{ env.TIME }} ${{ env.TIMEZONE }}"
           git push --force origin main
