--- a/.github/workflows/update-maps.yml
+++ b/.github/workflows/update-maps.yml
@@ -41,38 +41,44 @@ jobs:
           git fetch origin main
           git reset --hard origin/main
 
-      - name: Set timestamp variables
-        run: |
-          echo "DATE=$(TZ='Pacific/Auckland' date '+%Y-%m-%d')" >> $GITHUB_ENV
-          echo "TIME=$(TZ='Pacific/Auckland' date '+%H%M')" >> $GITHUB_ENV
-          echo "TIMEZONE=$(TZ='Pacific/Auckland' date '+%Z')" >> $GITHUB_ENV
-
       - name: Create directories
         run: |
           mkdir -p latest
-          mkdir -p archive/${{ env.DATE }}
+          mkdir -p archive
 
       - name: Generate temperature map (today)
         run: |
           uv run nz_ocean_map.py \
             --type temperature \
-            --output latest/temperature.png
-          cp latest/temperature.png archive/${{ env.DATE }}/temperature-${{ env.TIME }}.png
+            --output latest/temperature.png \
+            --write-timestamp temp_timestamp.txt
+          source temp_timestamp.txt
+          mkdir -p archive/$DATE
+          cp latest/temperature.png archive/$DATE/temperature-$TIME.png
+          echo "TEMP_DATE=$DATE" >> $GITHUB_ENV
+          echo "TEMP_TIME=$TIME" >> $GITHUB_ENV
+          echo "TEMP_TZ=$TIMEZONE" >> $GITHUB_ENV
 
       - name: Generate temperature forecast (tomorrow)
         run: |
           uv run nz_ocean_map.py \
             --type temperature \
             --days 1 \
-            --output latest/temperature_tomorrow.png
-          cp latest/temperature_tomorrow.png archive/${{ env.DATE }}/temperature_tomorrow-${{ env.TIME }}.png
+            --output latest/temperature_tomorrow.png \
+            --write-timestamp temp_tomorrow_timestamp.txt
+          source temp_tomorrow_timestamp.txt
+          mkdir -p archive/$DATE
+          cp latest/temperature_tomorrow.png archive/$DATE/temperature_tomorrow-$TIME.png
 
       - name: Generate anomaly map
         run: |
           uv run nz_ocean_map.py \
             --type anomaly \
-            --output latest/anomaly.png
-          cp latest/anomaly.png archive/${{ env.DATE }}/anomaly-${{ env.TIME }}.png
+            --output latest/anomaly.png \
+            --write-timestamp anomaly_timestamp.txt
+          source anomaly_timestamp.txt
+          mkdir -p archive/$DATE
+          cp latest/anomaly.png archive/$DATE/anomaly-$TIME.png
 
       - name: Remove .gitkeep files before upload
         run: |
@@ -90,7 +96,7 @@ jobs:
             --endpoint-url https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
             --exclude "*" --include "*.png" --include "*.csv" --include "*.parquet" \
             --no-progress
-          aws s3 sync archive/${{ env.DATE }}/ s3://${{ secrets.R2_BUCKET_NAME }}/archive/${{ env.DATE }}/ \
+          aws s3 sync archive/ s3://${{ secrets.R2_BUCKET_NAME }}/archive/ \
             --endpoint-url https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
             --exclude "*" --include "*.png" --include "*.csv" --include "*.parquet" \
             --no-progress
@@ -98,5 +104,5 @@ jobs:
       - name: Commit and push changes
         run: |
           git add latest/*.png archive/**/*.png
-          git diff --staged --quiet || git commit -m "Update ocean maps - ${{ env.DATE }} ${{ env.TIME }} ${{ env.TIMEZONE }}"
+          git diff --staged --quiet || git commit -m "Update ocean maps - ${{ env.TEMP_DATE }} ${{ env.TEMP_TIME }} ${{ env.TEMP_TZ }}"
           git push --force origin main
